--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ^3.8.0
+  sdk: '>=3.2.3 <4.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -33,24 +33,27 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.8
+  cupertino_icons: ^1.0.2
   firebase_core: ^3.13.1
   firebase_auth: ^5.5.4
   cloud_firestore: ^5.6.8
   firebase_storage: ^12.4.6
   firebase_analytics: ^11.4.6
-  provider: ^6.1.1
+  provider: ^6.0.5
   shared_preferences: ^2.2.2
   http: ^1.1.2
-  flutter_markdown: ^0.7.4+1
-  intl: ^0.18.1
+  flutter_markdown: ^0.7.7+1
+  intl: ^0.20.2
   url_launcher: ^6.2.1
-  file_picker: ^8.1.6
-  fl_chart: ^0.66.0
+  file_picker:
+  fl_chart: ^1.0.0
   image_picker: ^1.0.4
   google_sign_in: ^6.1.6
-  go_router: ^13.0.1
+  go_router: ^15.1.2
   cached_network_image: ^3.3.1
+  js: ^0.7.2
+  firebase_messaging: ^15.2.6
+  flutter_local_notifications: ^19.2.1
 
 dev_dependencies:
   flutter_test:
@@ -61,7 +64,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^5.0.0
+  flutter_lints: ^6.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -79,6 +82,7 @@ flutter:
     - assets/images/
     - assets/icons/
     - assets/fonts/
+    - web/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
